# aviate

./: .gitignore  BUILDING.md  COPYRIGHT.md  Cargo.toml  Cross.toml  README.md  build.rs
godot/: .gitignore  Aviate.gdextension  Aviate.gdextension.uid  export_presets.cfg  find_icon.png.import  find_icon.svg.import  icon.png.import  icon.svg.import  main.tscn  project.godot  ui.tscn
res/: apt_info.txt  bounds.json  rwy_info.txt
src/: app.rs  chart.rs  chart_widget.rs  config.rs  error_dlg.rs  find_dialog.rs  find_dlg.rs  geom.rs  info_dialog.rs  lib.rs  main.rs  main_widget.rs  nasr.rs  select_dialog.rs  select_dlg.rs  select_menu.rs  touch.rs  util.rs
src/nasr/: airport.rs  apt_base.rs  apt_base_csv.rs  apt_rmk.rs  apt_rmk_csv.rs  apt_rwy.rs  apt_rwy_csv.rs  apt_rwy_end.rs  apt_rwy_end_csv.rs  cls_arsp.rs  cls_arsp_csv.rs  common.rs  frq.rs  frq_csv.rs  mod.rs
