[package]
authors = ["Barugon"]
description = "VFR Flight Planner"
edition = "2021"
license = "GPL-3.0-or-later"
name = "aviate"
version = "0.1.0"

[features]
mobile = []

[dependencies]
dirs = "5.0"
eframe = "0.28"
egui_extras = {version = "0.28", features = ["image"]}
egui_file = "0.18"
gdal = {version = "0.16", features = ["bindgen"]}
image = {version = "0.25", features = ["png"]}
rstar = "0.12"
serde_json = "1.0"

[profile.release]
strip = "symbols"
