[package]
edition = "2024"
name = "aviate"
rust-version = "1.88"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
dev = []

[dependencies]
gdal = {version = "0.18", features = ["bindgen"]}
godot = {version = "0.3", features = ["experimental-threads"]}
rstar = "0.12"

[profile.release]
strip = "symbols"
